--- a/uknown_ewk6vx.libdb.json
+++ b/uknown_ewk6vx.libdb.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_ewk6vx.libdb",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_ewk6vx.libdb",
 	"sector": "HJG_7617",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566226212198
+		},
+		{
+			"type": "died",
+			"when": 1571987139809
 		}
 	],
 	"scrape_ct": 6,
@@ -159,6 +163,6 @@
 			]
 		}
 	],
-	"updt": 1570870461711,
-	"edit": 201
+	"updt": 1570877223647,
+	"edit": 202
 }
