--- a/uknown_ewk6vx.mgb.json
+++ b/uknown_ewk6vx.mgb.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_ewk6vx.mgb",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_ewk6vx.mgb",
 	"sector": "K_8071",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1569227339442
+		},
+		{
+			"type": "died",
+			"when": 1571986974971
 		}
 	],
 	"scrape_ct": 1,
@@ -160,8 +164,8 @@
 			]
 		}
 	],
-	"updt": 1570698622970,
-	"edit": 7,
+	"updt": 1570711028107,
+	"edit": 8,
 	"retry_args": [
 		{
 			"CLICK": true
