--- a/unknown_etjdee.db.json
+++ b/unknown_etjdee.db.json
@@ -6,48 +6,53 @@
 	"sector": "HJG_8589",
 	"sec_level": 4,
 	"date_added": 1571695111813,
-	"last_scraped": 1571986482035,
+	"last_scraped": 1571988934803,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571695111813
 		}
 	],
-	"next_scrape": 1572028379438,
+	"next_scrape": 1572028628868,
 	"category": "dice_roller",
-	"last_update": 1571986482035,
+	"last_update": 1571988934803,
 	"output": [
 		{
 			"args": {},
-			"calls": 1059486,
+			"calls": 1071547,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"u arr",
-				"line.",
-				" 6 la",
+				" 6 lan",
+				"line.\\n",
 				"6 lanes",
 				" 6 deck",
 				"s in a l",
+				"n a line",
 				"in a lin",
 				"e you ar",
 				"decks in",
 				"cks in a",
 				"ave you ",
-				"\\n2043 6",
-				"\\n2042 6",
 				"6 decks ",
 				"42 6 dec",
+				"4 Have y",
 				"2043 6 l",
 				"2042 6 d",
 				"044 Have",
 				"042 6 de",
 				" in a li",
+				" a line.",
 				" Have yo",
 				"wn.\\n2042",
+				"s.\\n2044 ",
 				"nes.\\n204",
 				"n.\\n2042 ",
+				"lanes.\\n2",
 				"ine.\\n204",
 				"e.\\n2043 ",
+				"\\n2043 6 ",
+				".\\n2042 6",
 				" lanes.\\n"
 			],
 			"hits": [
@@ -84,6 +89,6 @@
 			]
 		}
 	],
-	"updt": 1571984219118,
-	"edit": 120
+	"updt": 1571986698203,
+	"edit": 121
 }
