--- a/unknown_yuqh2v.bin.json
+++ b/unknown_yuqh2v.bin.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yuqh2v.bin",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_yuqh2v.bin",
 	"sector": "SPC_8800",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1571992150220
+		},
+		{
+			"type": "died",
+			"when": 1571994250136
 		}
 	],
 	"scrape_ct": 4,
@@ -493,8 +497,8 @@
 			]
 		}
 	],
-	"updt": 1571992561532,
-	"edit": 2,
+	"updt": 1571992788650,
+	"edit": 3,
 	"retry_args": [
 		{
 			"click": true
