--- a/unknown_yuqh2v.loc.json
+++ b/unknown_yuqh2v.loc.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yuqh2v.loc",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "unknown_yuqh2v.loc",
 	"sector": "HJG_5971",
 	"sec_level": 2,
@@ -35,10 +35,14 @@
 				"from": "HJG_5971",
 				"to": "K_6458"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571994271631
+		}
 	],
-	"updt": 1569114072498,
-	"edit": 13,
+	"updt": 1570663003136,
+	"edit": 14,
 	"scrape_ct": 18,
 	"next_scrape": 1569108413333,
 	"category": "UNKNOWN CATEGORY",
