--- a/unknown_yuqh2v.t1_scraper.json
+++ b/unknown_yuqh2v.t1_scraper.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yuqh2v.t1_scraper",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_yuqh2v.t1_scraper",
 	"sector": "HJG_4380",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1569085645113
+		},
+		{
+			"type": "died",
+			"when": 1571994340571
 		}
 	],
-	"updt": 1571162370137,
-	"edit": 200,
+	"updt": 1571166430318,
+	"edit": 201,
 	"next_scrape": 1571206891866,
 	"category": "coin_flipper",
 	"last_update": 1571166278490,
