--- a/unknown_etjdee.db.json
+++ b/unknown_etjdee.db.json
@@ -6,20 +6,20 @@
 	"sector": "HJG_8589",
 	"sec_level": 4,
 	"date_added": 1571695111813,
-	"last_scraped": 1571993707504,
+	"last_scraped": 1571996027859,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571695111813
 		}
 	],
-	"next_scrape": 1572035698806,
+	"next_scrape": 1572037262744,
 	"category": "dice_roller",
-	"last_update": 1571993707504,
+	"last_update": 1571996027859,
 	"output": [
 		{
 			"args": {},
-			"calls": 1083666,
+			"calls": 1092832,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"u arr",
@@ -27,6 +27,7 @@
 				"line.\\n",
 				"6 lanes",
 				" 6 deck",
+				"ve you a",
 				"s in a l",
 				"n a line",
 				"in a lin",
@@ -89,6 +90,6 @@
 			]
 		}
 	],
-	"updt": 1571991432907,
-	"edit": 123
+	"updt": 1571993915962,
+	"edit": 124
 }
