--- a/unknown_etjdee.db.json
+++ b/unknown_etjdee.db.json
@@ -6,31 +6,31 @@
 	"sector": "HJG_8589",
 	"sec_level": 4,
 	"date_added": 1571695111813,
-	"last_scraped": 1571996027859,
+	"last_scraped": 1571998233951,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571695111813
 		}
 	],
-	"next_scrape": 1572037262744,
+	"next_scrape": 1572040092925,
 	"category": "dice_roller",
-	"last_update": 1571996027859,
+	"last_update": 1571998233951,
 	"output": [
 		{
 			"args": {},
-			"calls": 1092832,
+			"calls": 1100341,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"u arr",
 				" 6 lan",
-				"line.\\n",
 				"6 lanes",
 				" 6 deck",
 				"ve you a",
 				"s in a l",
 				"n a line",
 				"in a lin",
+				"ecks in ",
 				"e you ar",
 				"decks in",
 				"cks in a",
@@ -49,6 +49,7 @@
 				"s.\\n2044 ",
 				"nes.\\n204",
 				"n.\\n2042 ",
+				"line.\\n20",
 				"lanes.\\n2",
 				"ine.\\n204",
 				"e.\\n2043 ",
@@ -90,6 +91,6 @@
 			]
 		}
 	],
-	"updt": 1571993915962,
-	"edit": 124
+	"updt": 1571996171267,
+	"edit": 125
 }
