--- a/unknown_etjdee.db.json
+++ b/unknown_etjdee.db.json
@@ -1,31 +1,36 @@
 {
 	"_id": "unknown_etjdee.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_etjdee.db",
 	"sector": "HJG_8589",
 	"sec_level": 4,
 	"date_added": 1571695111813,
-	"last_scraped": 1571998233951,
+	"last_scraped": 1572000304172,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571695111813
+		},
+		{
+			"type": "died",
+			"when": 1572000617233
 		}
 	],
-	"next_scrape": 1572040092925,
+	"next_scrape": 1572043847787,
 	"category": "dice_roller",
-	"last_update": 1571998233951,
+	"last_update": 1572000304172,
 	"output": [
 		{
 			"args": {},
-			"calls": 1100341,
+			"calls": 1104444,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
-				"u arr",
 				" 6 lan",
 				"6 lanes",
+				"43 6 la",
 				" 6 deck",
+				"you arra",
 				"ve you a",
 				"s in a l",
 				"n a line",
@@ -35,7 +40,9 @@
 				"decks in",
 				"cks in a",
 				"ave you ",
+				"Have you",
 				"6 decks ",
+				"44 Have ",
 				"42 6 dec",
 				"4 Have y",
 				"2043 6 l",
@@ -91,6 +98,6 @@
 			]
 		}
 	],
-	"updt": 1571996171267,
-	"edit": 125
+	"updt": 1572000453902,
+	"edit": 127
 }
