--- a/unknown_etjdee.render.json
+++ b/unknown_etjdee.render.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_etjdee.render",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_etjdee.render",
 	"sector": "K_2748",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1564168295048
+		},
+		{
+			"type": "died",
+			"when": 1572000525775
 		}
 	],
-	"updt": 1571071024761,
-	"edit": 237,
+	"updt": 1571076885063,
+	"edit": 238,
 	"next_scrape": 1571121175543,
 	"category": "plant_sim",
 	"last_update": 1571076757837,
