--- a/uknown_zqn3ap.feed.json
+++ b/uknown_zqn3ap.feed.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_zqn3ap.feed",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_zqn3ap.feed",
 	"sector": "HJG_1089",
 	"sec_level": 4,
 	"date_added": 1571906537494,
-	"last_scraped": 1571999391072,
+	"last_scraped": 1572001552570,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571906537494
 		}
 	],
-	"next_scrape": 1572045292035,
+	"next_scrape": 1572042267693,
 	"category": "coin_flipper",
-	"last_update": 1571999391072,
+	"last_update": 1572001552570,
 	"output": [
 		{
 			"args": {},
-			"calls": 413556,
+			"calls": 425316,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"2154 ",
@@ -54,6 +54,6 @@
 			]
 		}
 	],
-	"updt": 1571997522600,
-	"edit": 39
+	"updt": 1571999550819,
+	"edit": 40
 }
