--- a/unknown_b6d3vh.tryhard.json
+++ b/unknown_b6d3vh.tryhard.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_b6d3vh.tryhard",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_b6d3vh.tryhard",
 	"sector": "HJG_1089",
 	"sec_level": 4,
 	"date_added": 1571923909892,
-	"last_scraped": 1572011298787,
+	"last_scraped": 1572014174457,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571923909892
 		}
 	],
-	"next_scrape": 1572055171674,
+	"next_scrape": 1572060974396,
 	"category": "coin_flipper",
-	"last_update": 1572011298787,
+	"last_update": 1572014174457,
 	"output": [
 		{
 			"args": {},
-			"calls": 437173,
+			"calls": 453577,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"of 3.",
@@ -57,6 +57,6 @@
 			]
 		}
 	],
-	"updt": 1572009242523,
-	"edit": 38
+	"updt": 1572011496309,
+	"edit": 39
 }
