--- a/unknown_0jkcl8.db.json
+++ b/unknown_0jkcl8.db.json
@@ -6,20 +6,20 @@
 	"sector": "VNP_3268",
 	"sec_level": 4,
 	"date_added": 1571754786387,
-	"last_scraped": 1572020172368,
+	"last_scraped": 1572022422193,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571754786387
 		}
 	],
-	"next_scrape": 1572065747212,
+	"next_scrape": 1572062334447,
 	"category": "dice_roller",
-	"last_update": 1572020172368,
+	"last_update": 1572022422193,
 	"output": [
 		{
 			"args": {},
-			"calls": 999669,
+			"calls": 1017553,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"predi",
@@ -57,8 +57,8 @@
 			]
 		}
 	],
-	"updt": 1572018040783,
-	"edit": 115,
+	"updt": 1572020297625,
+	"edit": 116,
 	"identified": [
 		{
 			"document": "NOT FOUND",
