--- a/uknown_28mx3w.bigbot.json
+++ b/uknown_28mx3w.bigbot.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_28mx3w.bigbot",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_28mx3w.bigbot",
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1572057403473,
-	"last_scraped": 1572058561813,
+	"last_scraped": 1572058650797,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572057403473
 		}
 	],
-	"scrape_ct": 0,
-	"next_scrape": 1572058621813,
+	"next_scrape": 1572102952317,
 	"category": "coin_flipper",
-	"last_update": 1572058561813,
+	"last_update": 1572058650797,
 	"output": [
 		{
 			"args": {},
-			"calls": 132118,
+			"calls": 143988,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"patibi",
@@ -61,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1572057954073,
-	"edit": 3
+	"updt": 1572058629472,
+	"edit": 4
 }
