--- a/anon_20ckb9.config.json
+++ b/anon_20ckb9.config.json
@@ -1,23 +1,23 @@
 {
 	"_id": "anon_20ckb9.config",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "anon_20ckb9.config",
 	"sector": "HJG_5571",
 	"sec_level": 4,
 	"date_added": 1571929445969,
-	"last_scraped": 1572061987025,
+	"last_scraped": 1572064189360,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571929445969
 		}
 	],
-	"updt": 1572059983522,
-	"edit": 63,
-	"next_scrape": 1572104709818,
+	"updt": 1572062010595,
+	"edit": 64,
+	"next_scrape": 1572108142071,
 	"category": "plant_sim",
-	"last_update": 1572061987025,
+	"last_update": 1572064189360,
 	"output": [
 		{
 			"args": {},
@@ -47,7 +47,7 @@
 		},
 		{
 			"args": {},
-			"calls": 5144,
+			"calls": 6357,
 			"base": "c:\"fzecbv\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
 			"fragments": [
 				"n a s",
