--- a/uknown_b0qjqz.init.json
+++ b/uknown_b0qjqz.init.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_b0qjqz.init",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_b0qjqz.init",
 	"sector": "VNP_0925",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1571809467007
+		},
+		{
+			"type": "died",
+			"when": 1572070899927
 		}
 	],
 	"scrape_ct": 15,
@@ -542,5 +546,7 @@
 		{
 			"CLICK": true
 		}
-	]
+	],
+	"updt": 1571809702988,
+	"edit": 1
 }
