--- a/uknown_b0qjqz.better_xacts.json
+++ b/uknown_b0qjqz.better_xacts.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_b0qjqz.better_xacts",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_b0qjqz.better_xacts",
 	"sector": "HJG_7617",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566228584868
+		},
+		{
+			"type": "died",
+			"when": 1572070791054
 		}
 	],
 	"scrape_ct": 17,
@@ -182,8 +186,8 @@
 			]
 		}
 	],
-	"updt": 1568690477198,
-	"edit": 6,
+	"updt": 1570603031194,
+	"edit": 7,
 	"identified": [
 		{
 			"document": "NOT FOUND",
