--- a/uknown_lqxcau.bestgrade.json
+++ b/uknown_lqxcau.bestgrade.json
@@ -1,20 +1,20 @@
 {
 	"_id": "uknown_lqxcau.bestgrade",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "uknown_lqxcau.bestgrade",
 	"sector": "HJG_0153",
 	"sec_level": 3,
 	"date_added": 1563655647379,
-	"last_scraped": 1572072226275,
+	"last_scraped": 1572074185812,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563655647379
 		}
 	],
-	"updt": 1572070353128,
-	"edit": 694,
+	"updt": 1572072380913,
+	"edit": 695,
 	"pl_output": "Cannot read property 'type' of undefined",
-	"next_scrape": 1572158524294
+	"next_scrape": 1572154256779
 }
