--- a/uknown_lqxcau.mail.json
+++ b/uknown_lqxcau.mail.json
@@ -1,20 +1,28 @@
 {
 	"_id": "uknown_lqxcau.mail",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "uknown_lqxcau.mail",
-	"sector": "K_3221",
+	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1563655759056,
-	"last_scraped": 1572100420066,
+	"last_scraped": 0,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563655759056
-		}
+		},
+		[
+			{
+				"type": "sector change",
+				"when": 1572102454337,
+				"from": "VNP_8418",
+				"to": "K_3221"
+			}
+		]
 	],
 	"pl_output": "Username : \nPassword : \nForgot? []",
 	"next_scrape": 1572188069803,
-	"updt": 1572098329557,
-	"edit": 1899
+	"updt": 1572100586513,
+	"edit": 1900
 }
