--- a/uknown_9zvqnm.botnet.json
+++ b/uknown_9zvqnm.botnet.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_9zvqnm.botnet",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "dead",
 	"script": "uknown_9zvqnm.botnet",
 	"sector": "VNP_8418",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572102975588
+		},
+		{
+			"type": "died",
+			"when": 1572108825707
 		}
 	],
 	"scrape_ct": 18,
@@ -204,5 +208,7 @@
 				" because"
 			]
 		}
-	]
+	],
+	"updt": 1572103065033,
+	"edit": 1
 }
