--- a/uknown_9zvqnm.riot.json
+++ b/uknown_9zvqnm.riot.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_9zvqnm.riot",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_9zvqnm.riot",
 	"sector": "NGC_7257",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565391280951
+		},
+		{
+			"type": "died",
+			"when": 1572108825707
 		}
 	],
 	"next_scrape": 1571236437273,
@@ -56,8 +60,8 @@
 			]
 		}
 	],
-	"updt": 1571193008097,
-	"edit": 133,
+	"updt": 1571196392619,
+	"edit": 134,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
