--- a/uknown_lqxcau.snacfarm.json
+++ b/uknown_lqxcau.snacfarm.json
@@ -6,7 +6,7 @@
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1563655759056,
-	"last_scraped": 1572103035035,
+	"last_scraped": 1572108915734,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,18 +22,18 @@
 		]
 	],
 	"pl_output": "`2===== `Fscanfarm` `2=====`\n\n`1Welcome to the ``Fsnacfarm``1!`\n\n`2Usage:`\n\t`Nt` `Vscriptor`\n\t`1Corp scriptor to scrape, must be T1.`\n\nmade by skiilaa",
-	"next_scrape": 1572103095035,
-	"updt": 1572102841662,
-	"edit": 1903,
-	"scrape_ct": 11,
+	"next_scrape": 1572108975734,
+	"updt": 1572103065033,
+	"edit": 1904,
+	"scrape_ct": 9,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1572103035035,
+	"last_update": 1572108915734,
 	"output": [
 		{
 			"args": {
 				"t": 0
 			},
-			"calls": 954298,
+			"calls": 1249720,
 			"base": "`2===== `Fscanfarm` `2=====`\n\n`1Welcome to the ``Fsnacfarm``1!`\n\n`2Usage:`\n\t`Nt` `Vscriptor`\n\t`1Corp scriptor to scrape, must be T1.`\n\nmade by skiilaa",
 			"fragments": [
 				"LLORY",
