--- a/unknown_0axb7v.loic.json
+++ b/unknown_0axb7v.loic.json
@@ -6,33 +6,40 @@
 	"sector": "SPC_8152",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 1572100927405,
+	"last_scraped": 1572108821322,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
 		}
 	],
-	"updt": 1572098778990,
-	"edit": 216,
-	"next_scrape": 1572144219262,
+	"updt": 1572101036456,
+	"edit": 217,
+	"next_scrape": 1572148666193,
 	"category": "plant_sim",
-	"last_update": 1572100927405,
+	"last_update": 1572108821322,
 	"output": [
 		{
 			"args": {},
-			"calls": 194315,
+			"calls": 194997,
 			"base": "c:\"j04yl2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ty in",
+				"y in h",
 				"s with",
 				"nd imp",
 				"ment s",
 				"ions v",
 				" offic",
-				"of the ",
+				"via dro",
+				"impleme",
+				"e netwo",
+				"tworks w",
+				"ours, an",
 				"one netw",
-				"leaving "
+				"leaving ",
+				"icials f",
+				" of the "
 			],
 			"hits": [
 				{
