--- a/unknown_4gqqp5.mall.json
+++ b/unknown_4gqqp5.mall.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_4gqqp5.mall",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "unknown_4gqqp5.mall",
 	"sector": "VNP_8418",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572085063265
+		},
+		{
+			"type": "died",
+			"when": 1572108825707
 		}
 	],
 	"retry_args": [
@@ -28,6 +32,46 @@
 			"calls": 2049,
 			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 			"fragments": [
+				" stag",
+				"tive p",
+				"ive pr",
+				"ction ",
+				"will fu",
+				"tage 5.",
+				"5. ## f",
+				"l functi",
+				"ge 5. ##",
+				"e creati",
+				". ## for",
+				" for us "
+			],
+			"hits": [
+				{
+					"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+					"frags": [
+						" stag",
+						"tive p",
+						"ive pr",
+						"ction ",
+						"will fu",
+						"tage 5.",
+						"5. ## f",
+						"l functi",
+						"ge 5. ##",
+						"e creati",
+						". ## for",
+						" for us "
+					]
+				}
+			]
+		}
+	],
+	"updt": 1572085241952,
+	"edit": 1,
+	"identified": [
+		{
+			"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+			"frags": [
 				" stag",
 				"tive p",
 				"ive pr",
