--- a/uknown_lqxcau.snacfarm.json
+++ b/uknown_lqxcau.snacfarm.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lqxcau.snacfarm",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_lqxcau.snacfarm",
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1563655759056,
-	"last_scraped": 1572108915734,
+	"last_scraped": 1572109525566,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,18 +22,17 @@
 		]
 	],
 	"pl_output": "`2===== `Fscanfarm` `2=====`\n\n`1Welcome to the ``Fsnacfarm``1!`\n\n`2Usage:`\n\t`Nt` `Vscriptor`\n\t`1Corp scriptor to scrape, must be T1.`\n\nmade by skiilaa",
-	"next_scrape": 1572108975734,
-	"updt": 1572103065033,
-	"edit": 1904,
-	"scrape_ct": 9,
+	"next_scrape": 1572152649781,
+	"updt": 1572109379239,
+	"edit": 1907,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1572108915734,
+	"last_update": 1572109525566,
 	"output": [
 		{
 			"args": {
 				"t": 0
 			},
-			"calls": 1249720,
+			"calls": 2530062,
 			"base": "`2===== `Fscanfarm` `2=====`\n\n`1Welcome to the ``Fsnacfarm``1!`\n\n`2Usage:`\n\t`Nt` `Vscriptor`\n\t`1Corp scriptor to scrape, must be T1.`\n\nmade by skiilaa",
 			"fragments": [
 				"LLORY",
