--- a/unknown_h6yxmz.gcdump.json
+++ b/unknown_h6yxmz.gcdump.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_h6yxmz.gcdump",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_h6yxmz.gcdump",
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1572128759698,
-	"last_scraped": 1572129832841,
+	"last_scraped": 1572129903809,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572128759698
 		}
 	],
-	"updt": 1572129223842,
-	"edit": 3,
-	"scrape_ct": 0,
-	"next_scrape": 1572129892841,
+	"updt": 1572129899341,
+	"edit": 4,
+	"next_scrape": 1572174708912,
 	"category": "dice_roller",
-	"last_update": 1572129832841,
+	"last_update": 1572129903809,
 	"output": [
 		{
 			"args": {},
-			"calls": 120539,
+			"calls": 129674,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"IME E",
