--- a/uknown_phkbek.fuckthisshitimout.json
+++ b/uknown_phkbek.fuckthisshitimout.json
@@ -6,16 +6,16 @@
 	"sector": "HJG_5571",
 	"sec_level": 4,
 	"date_added": 1571978708982,
-	"last_scraped": 1572132967643,
+	"last_scraped": 1572135037164,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571978708982
 		}
 	],
-	"next_scrape": 1572175486862,
+	"next_scrape": 1572175254057,
 	"category": "plant_sim",
-	"last_update": 1572132967643,
+	"last_update": 1572135037164,
 	"output": [
 		{
 			"args": {},
@@ -48,6 +48,22 @@
 					]
 				}
 			]
+		},
+		{
+			"args": {},
+			"calls": 1177,
+			"base": "c:\"3f0rpd\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
+			"fragments": [
+				"comba",
+				" init",
+				"nder t",
+				"iate c",
+				"nitiate",
+				"BREAKs ",
+				"on defen",
+				"der turn",
+				"der BREA"
+			]
 		}
 	],
 	"identified": [
@@ -66,6 +82,6 @@
 			]
 		}
 	],
-	"updt": 1572130802129,
-	"edit": 72
+	"updt": 1572133284913,
+	"edit": 73
 }
