--- a/uknown_lqxcau.snacfarm.json
+++ b/uknown_lqxcau.snacfarm.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lqxcau.snacfarm",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_lqxcau.snacfarm",
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1563655759056,
-	"last_scraped": 1572138072209,
+	"last_scraped": 1572140203333,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,17 +22,17 @@
 		]
 	],
 	"pl_output": "`2===== `Fscanfarm` `2=====`\n\n`1Welcome to the ``Fsnacfarm``1!`\n\n`2Usage:`\n\t`Nt` `Vscriptor`\n\t`1Corp scriptor to scrape, must be T1.`\n\nmade by skiilaa",
-	"next_scrape": 1572178110490,
-	"updt": 1572135992609,
-	"edit": 1919,
+	"next_scrape": 1572183344672,
+	"updt": 1572138247923,
+	"edit": 1920,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1572138072209,
+	"last_update": 1572140203333,
 	"output": [
 		{
 			"args": {
 				"t": 0
 			},
-			"calls": 4289443,
+			"calls": 4444944,
 			"base": "`2===== `Fscanfarm` `2=====`\n\n`1Welcome to the ``Fsnacfarm``1!`\n\n`2Usage:`\n\t`Nt` `Vscriptor`\n\t`1Corp scriptor to scrape, must be T1.`\n\nmade by skiilaa",
 			"fragments": [
 				"LLORY",
