--- a/unknown_h6yxmz.gcdump.json
+++ b/unknown_h6yxmz.gcdump.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_h6yxmz.gcdump",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_h6yxmz.gcdump",
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1572128759698,
-	"last_scraped": 1572140564621,
+	"last_scraped": 1572142704133,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572128759698
 		}
 	],
-	"updt": 1572138475919,
-	"edit": 9,
-	"next_scrape": 1572186666608,
+	"updt": 1572140955754,
+	"edit": 10,
+	"next_scrape": 1572188367327,
 	"category": "dice_roller",
-	"last_update": 1572140564621,
+	"last_update": 1572142704133,
 	"output": [
 		{
 			"args": {},
-			"calls": 172817,
+			"calls": 181458,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"IME E",
