--- a/uknown_el1qyf.access_data.json
+++ b/uknown_el1qyf.access_data.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_el1qyf.access_data",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_el1qyf.access_data",
 	"sector": "VNP_9399",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1569085645113
+		},
+		{
+			"type": "died",
+			"when": 1572157009298
 		}
 	],
-	"updt": 1570803486079,
-	"edit": 111,
+	"updt": 1570810929490,
+	"edit": 112,
 	"next_scrape": 1570856972677,
 	"category": "dice_roller",
 	"last_update": 1570810918772,
