--- a/uknown_28mx3w.bigbot.json
+++ b/uknown_28mx3w.bigbot.json
@@ -6,29 +6,39 @@
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1572057403473,
-	"last_scraped": 1572183398406,
+	"last_scraped": 1572185523316,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572057403473
 		}
 	],
-	"next_scrape": 1572225260879,
+	"next_scrape": 1572228261349,
 	"category": "coin_flipper",
-	"last_update": 1572183398406,
+	"last_update": 1572185523316,
 	"output": [
 		{
 			"args": {},
-			"calls": 574975,
+			"calls": 590000,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
+				"value",
 				"patibi",
+				"nds?\\n",
+				"djuste",
 				"compat",
-				"I've a",
 				"?\\n209",
+				" the v",
+				"uman co",
 				"Why 5 s",
+				"2093 fo",
 				"2 I've ",
-				"lue\\n209"
+				"ve adjus",
+				"ted the ",
+				"sted the",
+				"man comp",
+				"lue\\n209",
+				" I've ad"
 			],
 			"hits": [
 				{
@@ -60,6 +70,6 @@
 			]
 		}
 	],
-	"updt": 1572181458407,
-	"edit": 59
+	"updt": 1572183487129,
+	"edit": 60
 }
