--- a/unknown_ulfcb8.bot_brain.json
+++ b/unknown_ulfcb8.bot_brain.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_ulfcb8.bot_brain",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_ulfcb8.bot_brain",
 	"sector": "K_7825",
 	"sec_level": 4,
 	"date_added": 1572198658702,
-	"last_scraped": 1572198990511,
+	"last_scraped": 1572199835155,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572198658702
 		}
 	],
-	"scrape_ct": 14,
-	"next_scrape": 1572199050511,
+	"next_scrape": 1572240040299,
 	"category": "coin_flipper",
-	"last_update": 1572198990511,
+	"last_update": 1572199835155,
 	"output": [
 		{
 			"args": {},
-			"calls": 45082,
+			"calls": 125409,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"they ",
@@ -64,6 +63,6 @@
 			]
 		}
 	],
-	"updt": 1572198819354,
-	"edit": 1
+	"updt": 1572199720745,
+	"edit": 4
 }
