--- a/unknown_yadysv.housekeeping_paypal.json
+++ b/unknown_yadysv.housekeeping_paypal.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_yadysv.housekeeping_paypal",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_yadysv.housekeeping_paypal",
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524437153,
-	"last_scraped": 1572200722993,
+	"last_scraped": 1572202733739,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524437153
 		}
 	],
-	"updt": 1572198366617,
-	"edit": 258,
-	"next_scrape": 1572243193452,
+	"updt": 1572200850581,
+	"edit": 259,
+	"next_scrape": 1572249340122,
 	"category": "plant_sim",
-	"last_update": 1572200722993,
+	"last_update": 1572202733739,
 	"output": [
 		{
 			"args": {},
@@ -77,7 +77,7 @@
 		},
 		{
 			"args": {},
-			"calls": 214014,
+			"calls": 215689,
 			"base": "c:\"9ntpaz\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"o tak",
