--- a/uknown_xcgazw.viewtest.json
+++ b/uknown_xcgazw.viewtest.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_xcgazw.viewtest",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_xcgazw.viewtest",
 	"sector": "K_7825",
 	"sec_level": 4,
 	"date_added": 1572204703250,
-	"last_scraped": 1572205345388,
+	"last_scraped": 1572205577203,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572204703250
 		}
 	],
-	"scrape_ct": 4,
-	"next_scrape": 1572205405388,
+	"next_scrape": 1572250282310,
 	"category": "dice_roller",
-	"last_update": 1572205345388,
+	"last_update": 1572205577203,
 	"output": [
 		{
 			"args": {},
-			"calls": 82157,
+			"calls": 111480,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				" grou",
@@ -63,5 +62,7 @@
 				"ance to "
 			]
 		}
-	]
+	],
+	"updt": 1572205359945,
+	"edit": 1
 }
