--- a/uknown_fw8224.banks.json
+++ b/uknown_fw8224.banks.json
@@ -6,21 +6,21 @@
 	"sector": "K_7825",
 	"sec_level": 4,
 	"date_added": 1572210734365,
-	"last_scraped": 1572210753175,
+	"last_scraped": 1572211638528,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572210734365
 		}
 	],
-	"scrape_ct": 20,
-	"next_scrape": 1572210813175,
+	"scrape_ct": 4,
+	"next_scrape": 1572211698528,
 	"category": "coin_flipper",
-	"last_update": 1572210753175,
+	"last_update": 1572211638528,
 	"output": [
 		{
 			"args": {},
-			"calls": 4154,
+			"calls": 90704,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"t Mal",
@@ -63,5 +63,7 @@
 				" ## We h"
 			]
 		}
-	]
+	],
+	"updt": 1572211223523,
+	"edit": 3
 }
