--- a/uknown_fw8224.banks.json
+++ b/uknown_fw8224.banks.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_fw8224.banks",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_fw8224.banks",
 	"sector": "K_7825",
 	"sec_level": 4,
 	"date_added": 1572210734365,
-	"last_scraped": 1572211638528,
+	"last_scraped": 1572212039654,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572210734365
 		}
 	],
-	"scrape_ct": 4,
-	"next_scrape": 1572211698528,
+	"next_scrape": 1572258588495,
 	"category": "coin_flipper",
-	"last_update": 1572211638528,
+	"last_update": 1572212039654,
 	"output": [
 		{
 			"args": {},
-			"calls": 90704,
+			"calls": 126482,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"t Mal",
@@ -64,6 +63,6 @@
 			]
 		}
 	],
-	"updt": 1572211223523,
-	"edit": 3
+	"updt": 1572211901286,
+	"edit": 5
 }
