--- a/uknown_28mx3w.bigbot.json
+++ b/uknown_28mx3w.bigbot.json
@@ -6,20 +6,20 @@
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1572057403473,
-	"last_scraped": 1572215658757,
+	"last_scraped": 1572217677709,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572057403473
 		}
 	],
-	"next_scrape": 1572256347436,
+	"next_scrape": 1572263908497,
 	"category": "coin_flipper",
-	"last_update": 1572215658757,
+	"last_update": 1572217677709,
 	"output": [
 		{
 			"args": {},
-			"calls": 698943,
+			"calls": 714441,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"value",
@@ -27,10 +27,12 @@
 				"nds?\\n",
 				"djuste",
 				"compat",
+				"\\n2093",
 				"?\\n209",
 				" the v",
+				"y 5 sec",
 				"uman co",
-				"Why 5 s",
+				"hy 5 se",
 				"2093 fo",
 				"2 I've ",
 				"ve adjus",
@@ -38,6 +40,10 @@
 				"sted the",
 				"man comp",
 				"lue\\n209",
+				"an compa",
+				"'ve adju",
+				" for hum",
+				" Why 5 s",
 				" I've ad"
 			],
 			"hits": [
@@ -70,6 +76,6 @@
 			]
 		}
 	],
-	"updt": 1572213705423,
-	"edit": 74
+	"updt": 1572215959532,
+	"edit": 75
 }
