--- a/unknown_ulfcb8.bot_brain.json
+++ b/unknown_ulfcb8.bot_brain.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_ulfcb8.bot_brain",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_ulfcb8.bot_brain",
 	"sector": "K_7825",
 	"sec_level": 4,
 	"date_added": 1572198658702,
-	"last_scraped": 1572219185420,
+	"last_scraped": 1572221255916,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572198658702
 		}
 	],
-	"next_scrape": 1572262617093,
+	"next_scrape": 1572263943469,
 	"category": "coin_flipper",
-	"last_update": 1572219185420,
+	"last_update": 1572221255916,
 	"output": [
 		{
 			"args": {},
-			"calls": 201317,
+			"calls": 207453,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"they ",
@@ -63,6 +63,6 @@
 			]
 		}
 	],
-	"updt": 1572217311125,
-	"edit": 14
+	"updt": 1572219339639,
+	"edit": 15
 }
