--- a/unknown_v7pdh4.rm.json
+++ b/unknown_v7pdh4.rm.json
@@ -6,27 +6,44 @@
 	"sector": "K_7825",
 	"sec_level": 4,
 	"date_added": 1572221265406,
-	"last_scraped": 1572221535806,
+	"last_scraped": 1572222441446,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572221265406
 		}
 	],
-	"scrape_ct": 15,
-	"next_scrape": 1572221595806,
+	"scrape_ct": 3,
+	"next_scrape": 1572222501446,
 	"category": "dice_roller",
-	"last_update": 1572221535806,
+	"last_update": 1572222441446,
 	"output": [
 		{
 			"args": {},
-			"calls": 31447,
+			"calls": 91725,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
+				"works",
+				"solut",
+				"a dro",
+				" with",
+				" offi",
 				"weeks ",
-				"ity of",
+				"olutio",
+				"implem",
+				" - lea",
+				"ving ci",
+				"thin we",
+				"ity off",
+				"e city ",
+				"aving c",
+				"urs, and",
+				"tions vi",
 				"s, and i",
-				"s via dr"
+				"s via dr",
+				"rs, and ",
+				"of the c",
+				"fficials"
 			],
 			"hits": [
 				{
@@ -73,5 +90,7 @@
 				"ity of"
 			]
 		}
-	]
+	],
+	"updt": 1572222277630,
+	"edit": 3
 }
