--- a/unknown_v7pdh4.rm.json
+++ b/unknown_v7pdh4.rm.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_v7pdh4.rm",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_v7pdh4.rm",
 	"sector": "K_7825",
 	"sec_level": 4,
 	"date_added": 1572221265406,
-	"last_scraped": 1572222441446,
+	"last_scraped": 1572222672537,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572221265406
 		}
 	],
-	"scrape_ct": 3,
-	"next_scrape": 1572222501446,
+	"next_scrape": 1572267843457,
 	"category": "dice_roller",
-	"last_update": 1572222441446,
+	"last_update": 1572222672537,
 	"output": [
 		{
 			"args": {},
-			"calls": 91725,
+			"calls": 110551,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"works",
@@ -91,6 +90,6 @@
 			]
 		}
 	],
-	"updt": 1572222277630,
-	"edit": 3
+	"updt": 1572222503439,
+	"edit": 4
 }
