--- a/unknown_2kg38m.bot_brain.json
+++ b/unknown_2kg38m.bot_brain.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_2kg38m.bot_brain",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_2kg38m.bot_brain",
 	"sector": "K_7825",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572222018018
+		},
+		{
+			"type": "died",
+			"when": 1572223858574
 		}
 	],
 	"retry_args": [
@@ -38,6 +42,23 @@
 				"t to tal",
 				"pecifica",
 				", someti"
+			],
+			"hits": [
+				{
+					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+					"frags": [
+						"lly: ",
+						"e. So",
+						". So ",
+						" Spec",
+						"ut it, ",
+						"e to ma",
+						"d you w",
+						"t to tal",
+						"pecifica",
+						", someti"
+					]
+				}
 			]
 		},
 		{
@@ -47,6 +68,42 @@
 			"calls": 9393,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
+				"lly: ",
+				"e. So",
+				". So ",
+				" Spec",
+				"ut it, ",
+				"e to ma",
+				"d you w",
+				"t to tal",
+				"pecifica",
+				", someti"
+			],
+			"hits": [
+				{
+					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+					"frags": [
+						"lly: ",
+						"e. So",
+						". So ",
+						" Spec",
+						"ut it, ",
+						"e to ma",
+						"d you w",
+						"t to tal",
+						"pecifica",
+						", someti"
+					]
+				}
+			]
+		}
+	],
+	"updt": 1572222277630,
+	"edit": 1,
+	"identified": [
+		{
+			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+			"frags": [
 				"lly: ",
 				"e. So",
 				". So ",
