--- a/unknown_v7pdh4.crack1.json
+++ b/unknown_v7pdh4.crack1.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_v7pdh4.crack1",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_v7pdh4.crack1",
 	"sector": "K_9556",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1563624033768
+		},
+		{
+			"type": "died",
+			"when": 1572223627292
 		}
 	],
-	"updt": 1568727021722,
-	"edit": 12,
+	"updt": 1570604387260,
+	"edit": 13,
 	"scrape_ct": 4,
 	"next_scrape": 1570649365609,
 	"category": "fishie_tank",
