--- a/unknown_v7pdh4.paypal.json
+++ b/unknown_v7pdh4.paypal.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_v7pdh4.paypal",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "dead",
 	"script": "unknown_v7pdh4.paypal",
 	"sector": "VNP_8698",
 	"sec_level": 4,
@@ -15,8 +15,14 @@
 		{
 			"type": "died",
 			"when": 1572223398546
+		},
+		{
+			"type": "died",
+			"when": 1572223646299
 		}
 	],
 	"pl_output": "{\"ok\":false,\"msg\":\"RUNTIME ERROR unknown_v7pdh4.paypal: script doesn't exist\"}",
-	"next_scrape": 1572303047273
+	"next_scrape": 1572303047273,
+	"updt": 1572223403286,
+	"edit": 1
 }
