--- a/unknown_v7pdh4.rm.json
+++ b/unknown_v7pdh4.rm.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_v7pdh4.rm",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_v7pdh4.rm",
 	"sector": "K_7825",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572221265406
+		},
+		{
+			"type": "died",
+			"when": 1572223586987
 		}
 	],
 	"next_scrape": 1572267843457,
@@ -90,6 +94,6 @@
 			]
 		}
 	],
-	"updt": 1572222503439,
-	"edit": 4
+	"updt": 1572222727593,
+	"edit": 5
 }
