--- a/unknown_2kg38m.db.json
+++ b/unknown_2kg38m.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_2kg38m.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_2kg38m.db",
 	"sector": "NGC_1037",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564236313207
+		},
+		{
+			"type": "died",
+			"when": 1572223870117
 		}
 	],
 	"scrape_ct": 2,
@@ -134,6 +138,6 @@
 			]
 		}
 	],
-	"updt": 1568791549542,
-	"edit": 14
+	"updt": 1570602128402,
+	"edit": 15
 }
