--- a/unknown_2kg38m.texas_holdem.json
+++ b/unknown_2kg38m.texas_holdem.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_2kg38m.texas_holdem",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "unknown_2kg38m.texas_holdem",
 	"sector": "K_7825",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572204963826
+		},
+		{
+			"type": "died",
+			"when": 1572223858574
 		}
 	],
 	"retry_args": [
@@ -37,6 +41,22 @@
 				"E You're",
 				"40 Deal ",
 				"203F :)\\n"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"040 D",
+						"03E Y",
+						" of me",
+						" :)\\n20",
+						"on.\\n203",
+						"g fun of",
+						"E You're",
+						"40 Deal ",
+						"203F :)\\n"
+					]
+				}
 			]
 		},
 		{
@@ -46,6 +66,40 @@
 			"calls": 100,
 			"base": "YOU WON 2GC\n...if i could afford to pay out.",
 			"fragments": [
+				"040 D",
+				"03E Y",
+				" of me",
+				" :)\\n20",
+				"on.\\n203",
+				"g fun of",
+				"E You're",
+				"40 Deal ",
+				"203F :)\\n"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"040 D",
+						"03E Y",
+						" of me",
+						" :)\\n20",
+						"on.\\n203",
+						"g fun of",
+						"E You're",
+						"40 Deal ",
+						"203F :)\\n"
+					]
+				}
+			]
+		}
+	],
+	"updt": 1572205359945,
+	"edit": 1,
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
 				"040 D",
 				"03E Y",
 				" of me",
