--- a/uknown_txwe1r.helpdesk.json
+++ b/uknown_txwe1r.helpdesk.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_txwe1r.helpdesk",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_txwe1r.helpdesk",
 	"sector": "VNP_8698",
 	"sec_level": 4,
 	"date_added": 1572230758655,
-	"last_scraped": 1572231239452,
+	"last_scraped": 1572232016663,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572230758655
 		}
 	],
-	"scrape_ct": 12,
-	"next_scrape": 1572231299452,
+	"next_scrape": 1572273748791,
 	"category": "coin_flipper",
-	"last_update": 1572231239452,
+	"last_update": 1572232016663,
 	"output": [
 		{
 			"args": {},
-			"calls": 53480,
+			"calls": 131537,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ST0X7",
@@ -61,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1572231069901,
-	"edit": 2
+	"updt": 1572231972858,
+	"edit": 5
 }
