--- a/uknown_28mx3w.bigbot.json
+++ b/uknown_28mx3w.bigbot.json
@@ -6,41 +6,48 @@
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1572057403473,
-	"last_scraped": 1572255566906,
+	"last_scraped": 1572257848556,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572057403473
 		}
 	],
-	"next_scrape": 1572297794091,
+	"next_scrape": 1572299193302,
 	"category": "coin_flipper",
-	"last_update": 1572255566906,
+	"last_update": 1572257848556,
 	"output": [
 		{
 			"args": {},
-			"calls": 853773,
+			"calls": 863552,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"value",
-				"patibi",
-				"nds?\\n",
-				"djuste",
+				" seco",
+				"he val",
 				"compat",
 				"\\n2093",
 				"?\\n209",
 				" the v",
 				"y 5 sec",
 				"uman co",
+				"nds?\\n2",
 				"hy 5 se",
+				"human c",
+				"ds?\\n20",
+				"adjuste",
 				"2093 fo",
 				"2 I've ",
 				"ve adjus",
 				"ted the ",
 				"sted the",
+				"ompatibi",
 				"man comp",
 				"lue\\n209",
+				"for huma",
+				"conds?\\n",
 				"an compa",
+				"91 Why 5",
 				"'ve adju",
 				" for hum",
 				" Why 5 s",
@@ -76,6 +83,6 @@
 			]
 		}
 	],
-	"updt": 1572253635014,
-	"edit": 93
+	"updt": 1572255665872,
+	"edit": 94
 }
