--- a/uknown_28mx3w.bigbot.json
+++ b/uknown_28mx3w.bigbot.json
@@ -6,20 +6,20 @@
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1572057403473,
-	"last_scraped": 1572279748714,
+	"last_scraped": 1572281928532,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572057403473
 		}
 	],
-	"next_scrape": 1572325954773,
+	"next_scrape": 1572322413672,
 	"category": "coin_flipper",
-	"last_update": 1572279748714,
+	"last_update": 1572281928532,
 	"output": [
 		{
 			"args": {},
-			"calls": 942904,
+			"calls": 948797,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"value",
@@ -31,6 +31,7 @@
 				" the v",
 				"y 5 sec",
 				"uman co",
+				"seconds",
 				"nds?\\n2",
 				"hy 5 se",
 				"human c",
@@ -48,6 +49,7 @@
 				"conds?\\n",
 				"an compa",
 				"91 Why 5",
+				"3 for hu",
 				"'ve adju",
 				" for hum",
 				" Why 5 s",
@@ -83,6 +85,6 @@
 			]
 		}
 	],
-	"updt": 1572277776380,
-	"edit": 104
+	"updt": 1572279803121,
+	"edit": 105
 }
